--- a/ext/js/language/english/phrasal-verb-particles.json
+++ b/ext/js/language/english/phrasal-verb-particles.json
@@ -21,9 +21,18 @@
     "by",
     "close",
     "down",
-    "east", "west", "north", "south",
-    "eastward", "westward", "northward", "southward",
-    "forward", "backward", "backwards", "forwards",
+    "east",
+    "west",
+    "north",
+    "south",
+    "eastward",
+    "westward",
+    "northward",
+    "southward",
+    "forward",
+    "backward",
+    "backwards",
+    "forwards",
     "home",
     "in",
     "inside",
